--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
   - "3.4"
 
 install:
-  - apt-get install cython
-  - apt-get install python-ipy
+  - sudo apt-get install cython
+  - sudo apt-get install python-ipy
   - wget https://streamhtmlparser.googlecode.com/files/streamhtmlparser-0.1.tar.gz
   - tar -zxvf streamhtmlparser-0.1.tar.gz
-  - cd streamhtmlparser-0.1 && ./configure && make && make install
-  - cd src/py-streamhtmlparser && make && make install
+  - cd streamhtmlparser-0.1 && ./configure && make && sudo make install
+  - cd src/py-streamhtmlparser && make && sudo make install
