--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ python:
 install:
   - sudo apt-get install cython
   - sudo apt-get install python-ipy
+  - sudo apt-get install libjs-modernizr
+  - sudo apt-get install libjs-jquery
+  - sudo apt-get install libjs-twitter-bootstrap
   - wget https://streamhtmlparser.googlecode.com/files/streamhtmlparser-0.1.tar.gz
   - tar -zxvf streamhtmlparser-0.1.tar.gz
   - cd streamhtmlparser-0.1 && ./configure && make && sudo make install
-  - cd src/py-streamhtmlparser && make && sudo make install
