--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
   - ./configure
   - make
   - sudo make install
-  - cd src/pystreamhtmlparser
+  - cd src/py-streamhtmlparser
   - make
   - sudo make install
   - cd ../../../
