--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 
 install:
   # install dependencies
-  - sudo apt-get install cython
+  - sudo pip install cython
   - sudo apt-get install python-ipy
 
   # install js libraries - not needed at this point
