Added "http/https" endpoint feature (to be used with a reverse proxy - e.g.https://proxy.example.com/http://www.example.com/)

--- a/proxy.conf
+++ b/proxy.conf
@@ -18,6 +18,10 @@ https_listen_port=40443
 http_port=80
 https_port=443
 
+;; The endpoints to rewrite URLs to for HTTP and HTTPs (to be used with a reverse proxy)
+;;http_endpoint=/http://
+;;https_endpoint=/https://
+
 ;; The certificate to use for HTTPS connections. This should be
 ;; readable by the user with which you run SwiperProxy.
 https_certificate=proxy.example.org.pem
