Reverse Proxy URL change support  - Added reverse proxy identification (by testing if config.http_endpoint == config.https_endpoint (Util.using_reverseproxy(config)))  - Added configuration option reverseproxy_scheme (default is http). This option only used when Util.using_reverseproxy is True  - Changed Util.rewrite and JSPage.rewrite_part to consider the reverse proxy scheme (and change the URLs accordingly)

--- a/proxy.conf
+++ b/proxy.conf
@@ -22,6 +22,9 @@ https_port=443
 ;;http_endpoint=/http://
 ;;https_endpoint=/https://
 
+;; Default reverse proxy scheme
+;;reverseproxy_scheme=https
+
 ;; The certificate to use for HTTPS connections. This should be
 ;; readable by the user with which you run SwiperProxy.
 https_certificate=proxy.example.org.pem
