Prepare to roll out 1.1

--- a/proxy.conf
+++ b/proxy.conf
@@ -18,7 +18,8 @@ https_listen_port=40443
 http_port=80
 https_port=443
 
-;; The endpoints to rewrite URLs to for HTTP and HTTPs (to be used with a reverse proxy)
+;; The endpoints to rewrite URLs to for HTTP and HTTPs (to be used with
+;; a reverse proxy)
 ;;http_endpoint=/http://
 ;;https_endpoint=/https://
 
