Some landing page html fixes; better defaults

--- a/proxy.conf
+++ b/proxy.conf
@@ -20,11 +20,11 @@ https_port=443
 
 ;; The endpoints to rewrite URLs to for HTTP and HTTPs (to be used with
 ;; a reverse proxy)
-;;http_endpoint=/http://
-;;https_endpoint=/https://
+http_endpoint=/
+https_endpoint=/
 
 ;; Default reverse proxy scheme
-;;reverseproxy_scheme=https
+reverseproxy_scheme=http
 
 ;; The certificate to use for HTTPS connections. This should be
 ;; readable by the user with which you run SwiperProxy.
