Strip leading http(s):// in input

--- a/proxy.conf
+++ b/proxy.conf
@@ -19,11 +19,11 @@ http_port=80
 https_port=443
 
 ;; The endpoints to rewrite URLs to for HTTP and HTTPs (to be used with
-;; a reverse proxy)
+;; a reverse proxy).
 http_endpoint=/
 https_endpoint=/
 
-;; Default reverse proxy scheme
+;; Default reverse proxy scheme.
 reverseproxy_scheme=http
 
 ;; The certificate to use for HTTPS connections. This should be
