support listen on ip

--- a/proxy.conf
+++ b/proxy.conf
@@ -6,6 +6,9 @@
 ;; The DNS-address your proxy resides on.
 hostname=proxy.example.org
 
+;; The ip to listen on. Normal ipv4 address or empty for all (*), localhost for 127.0.0.1
+listen_ip_address=
+
 ;; The port to listen on for HTTP. This is the port your users connect
 ;; to. If you are using a reverse proxy, this is the port your HTTPD
 ;; should proxy to.
