--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 install:
   # install dependencies
   - sudo which python
+  - sudo apt-get update
   - sudo apt-get install cython python-ipy
 
   # build streamhtmlparser and python module
