x-forwarded-proto as an option instead of https server in case there is a reverse proxy

--- a/proxy.conf
+++ b/proxy.conf
@@ -93,6 +93,9 @@ block_robots=yes
 ;; Add an X-Forwarded-For header with the client IP?
 use_forwarded_for=no
 
+;; Use X-Forwarded-Proto header to identify SSL connections (instead of using listening port)
+use_forwarded_proto=no
+
 ;; Filename of a blocklist.
 block_list=blocklist.txt
 
