support for outgoing https proxy

--- a/proxy.conf
+++ b/proxy.conf
@@ -93,6 +93,10 @@ block_robots=yes
 ;; Add an X-Forwarded-For header with the client IP?
 use_forwarded_for=no
 
+;; HTTP(S) Proxy to use for outgoing connections
+;; in the format "ip:port", leave blank to connect directly
+https_proxy=
+
 ;; Filename of a blocklist.
 block_list=blocklist.txt
 
